--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="bigdcont">
-        <p><a id="balls" class="sexmove">8</a>======================0</p>
+        <p><a id="balls" class="sexmove">8</a>================================0</p>
     </div>
 </body>
 </html>
